# formulanein

./: README.md  pyproject.toml
src/formulanein/: __init__.py
src/formulanein/templates/: season.html
tests/: test_formulanein.py
